# livro-de-transicao-de-area-tecnica

./: .gitignore  AGENTS.md  README.md
.opencode/skills/validate-exercises/: SKILL.md
docs/: SUMMARY.md
docs/appendices/: a-python-vs-javascript.md  b-comandos-do-ecossistema.md  c-erros-frequentes.md  d-glossario.md
docs/chapters/: 00-por-que-python.md  01-ambiente-profissional.md  02-sintaxe-essencial.md  03-codigo-pythonico.md  04-objetos-em-python.md  05-recursos-avancados.md  06-estrutura-de-projetos.md  07-tipagem.md  08-testes.md  09-cli-profissional.md  10-banco-de-dados.md  11-apis-fastapi.md  12-llms.md  13-prompts.md  14-memoria.md  15-tool-calling.md  16-mcp.md  17-embeddings.md  18-rag.md  19-integracao-e-entrega.md  20-leitura-de-codigo.md
docs/project/pytool/: README.md
project/pytool/: pyproject.toml
project/pytool/src/pytool/: __init__.py  version.py
project/pytool/src/tests/: test_version.py
